tests/errors/control_flow/loop_range_violations.out
Error in tests/errors/control_flow/loop_range_violations.sad:
[E4001] Traceback (most recent call last):
  File tests/errors/control_flow/loop_range_violations.sad, line 2, in <program>
    Cycle i = foo : 10 {}
              ^^^
TypeError: Loop start value must be a Number, not 'Function'
